# data-engineering-knowledge

./: .gitignore  404.html  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: ci.yaml
assets/javascripts/: bundle.f1b6f286.min.js
diagrams/: terraform-resources.drawio
diagrams/01/: terraform-resources.drawio
docs/: faq.md  index.md  resources.md  sql.md  tools.md
docs/assets/stylesheets/: extra.css
docs/css/: custom.css
docs/programming/: index.md
docs/programming/python/: profiling.md  testing.md
docs/projects/machine-learning/: 01.md
docs/sql/: concepts.md  getting-started.md  intro.md  introduction.md  resources.md
docs/sql/concepts/: keys.md  relashionships.md
docs/sql/getting-started/: installation.md
docs/sql/language/: functions.md  instructions.md
docs/sql/syntax/: instructions.md
docs/stylesheets/: extra.css
faq/: index.html
notebooks/: sql.ipynb
overrides/: home.html
overrides/partials/: content.html  header.html  ignore-macro.html  nav.html  tabs.html  toc-item.html
projects/: index.html
projects/data-engineering/: index.html
projects/dataops/: index.html
projects/machine-learning/01/: index.html
resources/: index.html
search/: search_index.json
tools/: index.html
