[project]
name = "data-engineering-docs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["ipykernel>=6.29.5", "ipywidgets>=8.1.5", "jupysql>=0.10.17"]

[dependency-groups]
build = [
    "mkdocs-material>=9.5.50",
    "mkdocs-git-revision-date-localized-plugin>=1.3.0",
]
